--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tudexnetworks.tudexgames">
+    package="com.tudexnetworks.tudexgames"
+    android:versionCode="3"
+    android:versionName="3.2">
     <uses-permission android:name="android.permission.INTERNET" />
-    <application
-        android:allowBackup="true"
+    <application android:allowBackup="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,10 +14,8 @@
             android:theme="@style/Theme.Material.Light.NoActionBar.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
